--- a/apps/rover/src/mixer.c.jinja
+++ b/apps/rover/src/mixer.c.jinja
@@ -14,7 +14,7 @@
 struct msg_actuators_t mixer(struct msg_rc_input_t * msg_rc_input) {
     struct msg_actuators_t actuators_msg;
 
-    enum flight_mode_t mode = msg_rc_input->mode;
+    enum control_mode_t mode = msg_rc_input->mode;
 
 {%- if inputs.manual.axes.thrust %}
     double vt = msg_rc_input->thrust;
@@ -35,9 +35,10 @@ struct msg_actuators_t mixer(struct msg_rc_input_t * msg_rc_input) {
     double mix_yaw = armed ? vy : 0;
 {%- set yaw = mixer.yaw.split(',') -%}
 {% set thrust = mixer.thrust.split(',') %}
-    {% for name, esc in escs.items()  %}
+{% if not escs.esc.__class__.__name__ == 'list' -%}
+{%- set esc = escs.esc %}
     double scale{{ esc.control_index }} = 1.0;
-    if (mode == FLIGHT_MODE_MANUAL) {
+    if (mode == MODE_MANUAL) {
         scale{{ esc.control_index }} = ({{ esc.max_rps }} - {{ esc.min_rps }})/2.0;
     }
     double actuator{{ esc.control_index }} = {{ thrust[esc.control_index | int ] }}*mix_thrust*scale{{ esc.control_index }} + {{ yaw[esc.control_index | int ] }}*mix_yaw*scale{{ esc.control_index }};
@@ -47,10 +48,26 @@ struct msg_actuators_t mixer(struct msg_rc_input_t * msg_rc_input) {
         actuator{{ esc.control_index }} = {{ esc.min_rps }};
     }
     actuators_msg.actuator{{ esc.control_index }}_value = actuator{{ esc.control_index }};
-    {% endfor %}
-    {% for name, servo in servos.items()  %}
+{%- endif %}
+{% if escs.esc.__class__.__name__ == 'list' -%}
+{%- for esc in escs.esc %}
+    double scale{{ esc.control_index }} = 1.0;
+    if (mode == MODE_MANUAL) {
+        scale{{ esc.control_index }} = ({{ esc.max_rps }} - {{ esc.min_rps }})/2.0;
+    }
+    double actuator{{ esc.control_index }} = {{ thrust[esc.control_index | int ] }}*mix_thrust*scale{{ esc.control_index }} + {{ yaw[esc.control_index | int ] }}*mix_yaw*scale{{ esc.control_index }};
+    if(actuator{{ esc.control_index }} > {{ esc.max_rps }}) {
+        actuator{{ esc.control_index }} = {{ esc.max_rps }};
+    } else if (actuator{{ esc.control_index }} < {{ esc.min_rps }}) {
+        actuator{{ esc.control_index }} = {{ esc.min_rps }};
+    }
+    actuators_msg.actuator{{ esc.control_index }}_value = actuator{{ esc.control_index }};
+{%- endfor %}
+{%- endif %}
+{% if not servos.servo.__class__.__name__ == 'list' -%}
+{% set servo = servos.servo -%}
     double scale{{ servo.control_index }} = 1.0;
-    if (mode == FLIGHT_MODE_MANUAL) {
+    if (mode == MODE_MANUAL) {
         scale{{ servo.control_index }} = ({{ servo.max }} - {{ servo.min }})/2.0;
     }
     double actuator{{ servo.control_index }} = {{ thrust[servo.control_index | int ] }}*mix_thrust*scale{{ servo.control_index }} + {{ yaw[servo.control_index | int ] }}*mix_yaw*scale{{ servo.control_index }};
@@ -60,8 +77,60 @@ struct msg_actuators_t mixer(struct msg_rc_input_t * msg_rc_input) {
         actuator{{ servo.control_index }} = {{ servo.min }};
     }
     actuators_msg.actuator{{ servo.control_index }}_value = actuator{{ servo.control_index }};
-    {% endfor %}
+
 {%- endif %}
+{% if servos.servo.__class__.__name__ == 'list' -%}
+{%- for servo in servos.servo  %}
+    double scale{{ servo.control_index }} = 1.0;
+    if (mode == MODE_MANUAL) {
+        scale{{ servo.control_index }} = ({{ servo.max }} - {{ servo.min }})/2.0;
+    }
+    double actuator{{ servo.control_index }} = {{ thrust[servo.control_index | int ] }}*mix_thrust*scale{{ servo.control_index }} + {{ yaw[servo.control_index | int ] }}*mix_yaw*scale{{ servo.control_index }};
+    if(actuator{{ servo.control_index }} > {{ servo.max }}) {
+        actuator{{servo.control_index }} = {{ servo.max }};
+    } else if (actuator{{ servo.control_index }} < {{ servo.min }}) {
+        actuator{{ servo.control_index }} = {{ servo.min }};
+    }
+    actuators_msg.actuator{{ servo.control_index }}_value = actuator{{ servo.control_index }};
+{%- endfor %}
+{%- endif %}
+{%- endif %}
+{% if ( mixer.type == "differential") %}
+    double mix_thrust = armed ? vt : 0;
+    double mix_yaw = armed ? vy : 0;
+{%- set yaw = mixer.yaw.split(',') -%}
+{% set thrust = mixer.thrust.split(',') %}
+{% if not escs.esc.__class__.__name__ == 'list' -%}
+{%- set esc = escs.esc %}
+    double scale{{ esc.control_index }} = 1.0;
+    if (mode == MODE_MANUAL) {
+        scale{{ esc.control_index }} = ({{ esc.max_rps }} - {{ esc.min_rps }})/2.0;
+    }
+    double actuator{{ esc.control_index }} = {{ thrust[esc.control_index | int ] }}*mix_thrust*scale{{ esc.control_index }} + {{ yaw[esc.control_index | int ] }}*mix_yaw*scale{{ esc.control_index }};
+    if(actuator{{ esc.control_index }} > {{ esc.max_rps }}) {
+        actuator{{ esc.control_index }} = {{ esc.max_rps }};
+    } else if (actuator{{ esc.control_index }} < {{ esc.min_rps }}) {
+        actuator{{ esc.control_index }} = {{ esc.min_rps }};
+    }
+    actuators_msg.actuator{{ esc.control_index }}_value = actuator{{ esc.control_index }};
+{%- endif %}
+{% if escs.esc.__class__.__name__ == 'list' -%}
+{%- for esc in escs.esc %}
+    double scale{{ esc.control_index }} = 1.0;
+    if (mode == MODE_MANUAL) {
+        scale{{ esc.control_index }} = ({{ esc.max_rps }} - {{ esc.min_rps }})/2.0;
+    }
+    double actuator{{ esc.control_index }} = {{ thrust[esc.control_index | int ] }}*mix_thrust*scale{{ esc.control_index }} + {{ yaw[esc.control_index | int ] }}*mix_yaw*scale{{ esc.control_index }};
+    if(actuator{{ esc.control_index }} > {{ esc.max_rps }}) {
+        actuator{{ esc.control_index }} = {{ esc.max_rps }};
+    } else if (actuator{{ esc.control_index }} < {{ esc.min_rps }}) {
+        actuator{{ esc.control_index }} = {{ esc.min_rps }};
+    }
+    actuators_msg.actuator{{ esc.control_index }}_value = actuator{{ esc.control_index }};
+{% endfor %}
+{%- endif %}
+{%- endif %}
+
     return actuators_msg;
 }
 
