--- a/src/sim_gz/src/sim_gz_driver.cc.jinja
+++ b/src/sim_gz/src/sim_gz_driver.cc.jinja
@@ -371,37 +371,37 @@ void thread_sim_entry_point(void)
     // sleep main thread, everything done async
     while (!g_terminatePub)
     {
-        // host sleep doesn't count for zephyr time
-        while (queue_actuator.tryPop(msg)) {
-            uint64_t sec = msg.timestamp/1e9;
-            uint64_t nsec = msg.timestamp - sec*1e9;
+        // wait for a new actuator msg, then send it
+        queue_actuator.waitAndPop(msg);
+        uint64_t sec = msg.timestamp/1e9;
+        uint64_t nsec = msg.timestamp - sec*1e9;
 
 {%- if actuators.escs %}
 {%- if type == "multicopter" %}
-            escs.set_velocity({{ esc.sim_actuator }}, msg.actuator{{ esc.control_index }}_value);
-            if (!pub_esc_ptr.lock().get()->Publish(escs)) {
-                std::cerr << "Error publishing topic [" << esc_topic << "]" << std::endl;
-            }
+        escs.set_velocity({{ esc.sim_actuator }}, msg.actuator{{ esc.control_index }}_value);
+        if (!pub_esc_ptr.lock().get()->Publish(escs)) {
+            std::cerr << "Error publishing topic [" << esc_topic << "]" << std::endl;
+        }
 
 {% endif %}
 {%- if type == "rover" %}
 {% if not escs.esc.__class__.__name__ == 'list' -%}
 {% set esc = escs.esc %}
-            esc{{ esc.control_index }}.set_data(msg.actuator{{esc.control_index }}_value);
-            esc{{ esc.control_index }}.mutable_header()->mutable_stamp()->set_sec(sec);
-            esc{{ esc.control_index }}.mutable_header()->mutable_stamp()->set_nsec(nsec);
-            if (!pub_esc{{ esc.control_index }}_ptr.lock().get()->Publish(esc{{ esc.control_index }})) {
-                std::cerr << "Error publishing topic [" << esc{{ esc.control_index }}_topic << "]" << std::endl;
-            }
+        esc{{ esc.control_index }}.set_data(msg.actuator{{esc.control_index }}_value);
+        esc{{ esc.control_index }}.mutable_header()->mutable_stamp()->set_sec(sec);
+        esc{{ esc.control_index }}.mutable_header()->mutable_stamp()->set_nsec(nsec);
+        if (!pub_esc{{ esc.control_index }}_ptr.lock().get()->Publish(esc{{ esc.control_index }})) {
+            std::cerr << "Error publishing topic [" << esc{{ esc.control_index }}_topic << "]" << std::endl;
+        }
 {% endif -%}
 {% if escs.esc.__class__.__name__ == 'list' -%}
 {%- for esc in escs.esc %}
-            esc{{ esc.control_index }}.set_data(msg.actuator{{esc.control_index }}_value);
-            esc{{ esc.control_index }}.mutable_header()->mutable_stamp()->set_sec(sec);
-            esc{{ esc.control_index }}.mutable_header()->mutable_stamp()->set_nsec(nsec);
-            if (!pub_esc{{ esc.control_index }}_ptr.lock().get()->Publish(esc{{ esc.control_index }})) {
-                std::cerr << "Error publishing topic [" << esc{{ esc.control_index }}_topic << "]" << std::endl;
-            }
+        esc{{ esc.control_index }}.set_data(msg.actuator{{esc.control_index }}_value);
+        esc{{ esc.control_index }}.mutable_header()->mutable_stamp()->set_sec(sec);
+        esc{{ esc.control_index }}.mutable_header()->mutable_stamp()->set_nsec(nsec);
+        if (!pub_esc{{ esc.control_index }}_ptr.lock().get()->Publish(esc{{ esc.control_index }})) {
+            std::cerr << "Error publishing topic [" << esc{{ esc.control_index }}_topic << "]" << std::endl;
+        }
 
 {%- endfor -%}
 {% endif %}
@@ -410,28 +410,24 @@ void thread_sim_entry_point(void)
 {%- if actuators.servos %}
 {% if not servos.servo.__class__.__name__ == 'list' -%}
 {% set servo = servos.servo %}
-            servo{{ servo.control_index }}.set_data(msg.actuator{{servo.control_index }}_value);
-            servo{{ servo.control_index }}.mutable_header()->mutable_stamp()->set_sec(sec);
-            servo{{ servo.control_index }}.mutable_header()->mutable_stamp()->set_nsec(nsec);
-            if (!pub_servo{{ servo.control_index }}_ptr.lock().get()->Publish(servo{{ servo.control_index }})) {
-                std::cerr << "Error publishing topic [" << servo{{ servo.control_index }}_topic << "]" << std::endl;
-            }
-{% endif %}
-{% if servos.servo.__class__.__name__ == 'list' -%}
+        servo{{ servo.control_index }}.set_data(msg.actuator{{servo.control_index }}_value);
+        servo{{ servo.control_index }}.mutable_header()->mutable_stamp()->set_sec(sec);
+        servo{{ servo.control_index }}.mutable_header()->mutable_stamp()->set_nsec(nsec);
+        if (!pub_servo{{ servo.control_index }}_ptr.lock().get()->Publish(servo{{ servo.control_index }})) {
+            std::cerr << "Error publishing topic [" << servo{{ servo.control_index }}_topic << "]" << std::endl;
+        }
+{%- endif %}
+{%- if servos.servo.__class__.__name__ == 'list' -%}
 {%- for servo in servos.servo %}
-            servo{{ servo.control_index }}.set_data(msg.actuator{{servo.control_index }}_value);
-            servo{{ servo.control_index }}.mutable_header()->mutable_stamp()->set_sec(sec);
-            servo{{ servo.control_index }}.mutable_header()->mutable_stamp()->set_nsec(nsec);
-            if (!pub_servo{{ servo.control_index }}_ptr.lock().get()->Publish(servo{{ servo.control_index }})) {
-                std::cerr << "Error publishing topic [" << servo{{ servo.control_index }}_topic << "]" << std::endl;
-            }
-
+        servo{{ servo.control_index }}.set_data(msg.actuator{{servo.control_index }}_value);
+        servo{{ servo.control_index }}.mutable_header()->mutable_stamp()->set_sec(sec);
+        servo{{ servo.control_index }}.mutable_header()->mutable_stamp()->set_nsec(nsec);
+        if (!pub_servo{{ servo.control_index }}_ptr.lock().get()->Publish(servo{{ servo.control_index }})) {
+            std::cerr << "Error publishing topic [" << servo{{ servo.control_index }}_topic << "]" << std::endl;
+        }
 {%- endfor -%}
 {% endif -%}
 {% endif %}
-            // sleep 1 ms
-            usleep(1000);
-        }
     }
 }
 
